@@ -50,6 +50,7 @@ const REG_7 = /\\/g;
 const REG_8 = /'/g;
 const REG_9 = />\n\s+/g;
 const REG_10 = /(\w|\W)\n\s+</g;
+const REG_ROOT = /@\{#\}(\/)/g;
 const REG_WIN = /\r/g;
 const REG_BLOCK_BEG = /@\{block.*?\}/i;
 const REG_BLOCK_END = /@\{end\}/i;
@@ -1775,7 +1776,7 @@ function localize(language, command) {
 
 function view_parse(content, minify, filename, controller) {
 
-	content = removeComments(content);
+	content = urlmaker(removeComments(content));
 
 	var nocompressHTML = false;
 	var nocompressJS = false;
@@ -2495,9 +2496,7 @@ function view_is_assign(value) {
 			if (!skip)
 				return true;
 		}
-
 	}
-
 	return false;
 }
 
@@ -3402,8 +3401,17 @@ exports.restart = function() {
 	INDEXFILE = 0;
 };
 
-function markup(body) {
+function urlmaker(body) {
+	return body.replace(REG_ROOT, $urlmaker);
+}
 
+function $urlmaker(text) {
+	var c = text[4];
+	return F.config['default-root'] ? F.config['default-root'] : (c || '');
+}
+
+function markup(body) {
+	body = urlmaker(body);
 	var command = view_find_command(body, 0, true);
 	if (!command)
 		return body;
